# gl-earth

./: CMakeLists.txt  README.md
include/glm/: ext.hpp  fwd.hpp  glm.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp
include/glm/detail/: _features.hpp  _noise.hpp  _swizzle.hpp  _swizzle_func.hpp  _vectorize.hpp  dummy.cpp  func_common.hpp  func_exponential.hpp  func_geometric.hpp  func_integer.hpp  func_matrix.hpp  func_packing.hpp  func_trigonometric.hpp  func_vector_relational.hpp  precision.hpp  type_float.hpp  type_gentype.hpp  type_half.hpp  type_int.hpp  type_mat.hpp  type_mat2x2.hpp  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x2.hpp  type_mat3x3.hpp  type_mat3x4.hpp  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x4.hpp  type_vec.hpp  type_vec1.hpp  type_vec2.hpp  type_vec3.hpp  type_vec4.hpp
include/glm/gtc/: bitfield.hpp  color_space.hpp  constants.hpp  epsilon.hpp  functions.hpp  integer.hpp  matrix_access.hpp  matrix_integer.hpp  matrix_inverse.hpp  matrix_transform.hpp  noise.hpp  packing.hpp  quaternion.hpp  random.hpp  reciprocal.hpp  round.hpp  type_aligned.hpp  type_precision.hpp  type_ptr.hpp  ulp.hpp  vec1.hpp
include/glm/gtx/: associated_min_max.hpp  bit.hpp  closest_point.hpp  color_space.hpp  color_space_YCoCg.hpp  common.hpp  compatibility.hpp  component_wise.hpp  dual_quaternion.hpp  euler_angles.hpp  extend.hpp  extended_min_max.hpp  fast_exponential.hpp  fast_square_root.hpp  fast_trigonometry.hpp  gradient_paint.hpp  handed_coordinate_space.hpp  hash.hpp  integer.hpp  intersect.hpp  io.hpp  log_base.hpp  matrix_cross_product.hpp  matrix_decompose.hpp  matrix_interpolation.hpp  matrix_major_storage.hpp  matrix_operation.hpp  matrix_query.hpp  matrix_transform_2d.hpp  mixed_product.hpp  norm.hpp  normal.hpp  normalize_dot.hpp  number_precision.hpp  optimum_pow.hpp  orthonormalize.hpp  perpendicular.hpp  polar_coordinates.hpp  projection.hpp  quaternion.hpp  (+18 more)
include/glm/simd/: common.h  exponential.h  matrix.h
resource/: earth.xcf
src/: CMakeLists.txt  earth.cc
